--- a/styles/e-shop.css
+++ b/styles/e-shop.css
@@ -51,12 +51,16 @@ button, button:focus, button:hover, .buy-btn, .buy-btn:hover, .buy-btn:focus {
 
 .logo {
   font-weight: bold;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .btn-cart, .btn-search {
   position: relative;
   background-color: #a9c2c9;
   padding: 10px 20px;
+  height: 40px;
   font-weight: bold;
   color: #1B3F48;
   border-radius: 5px;
@@ -238,9 +242,9 @@ p {
 .header-right {
   /* position: static; */
   /* width: 50%; */
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   z-index: 100;
   text-align: right;
 }
@@ -468,11 +472,30 @@ p {
 .search-form {
   position: relative;
   margin-right: 50px;
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .search-field:focus {
   outline: none;
+  background-color: #a9c2c9;
+}
+
+.search-field:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.search-field:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+.search-field:focus::-ms-input-placeholder {
+  color: transparent;
+}
+
+.search-field:focus::placeholder {
+  color: transparent;
 }
 
 .search-field {
@@ -480,11 +503,47 @@ p {
           box-sizing: border-box;
   min-width: 250px;
   max-width: 450px;
-  color: white;
+  height: 40px;
+  color: #1B3F48;
   padding: 10px;
   background-color: #58787F;
   border: 1px solid #a9c2c9;
   border-radius: 10px;
+}
+
+.search-field::-webkit-input-placeholder {
+  color: #1B3F48;
+}
+
+.search-field:-ms-input-placeholder {
+  color: #1B3F48;
+}
+
+.search-field::-ms-input-placeholder {
+  color: #1B3F48;
+}
+
+.search-field::placeholder {
+  color: #1B3F48;
+}
+
+.search-block {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-clear {
+  position: absolute;
+  right: 10px;
+  font-size: 1.2em;
+  background-color: transparent;
+  color: #1B3F48;
+  cursor: pointer;
 }
 
 .btn-close {
