--- a/styles/e-shop.css
+++ b/styles/e-shop.css
@@ -8,16 +8,14 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #a9c2c9;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(20%, rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.4))) no-repeat center, url("../images/e-shop/freeride1_b.jpg") no-repeat center;
-  background: linear-gradient(to top, rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0.4)) no-repeat center, url("../images/e-shop/freeride1_b.jpg") no-repeat center;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(5%, white), to(rgba(133, 247, 255, 0.3))), url("../images/e-shop/back3.jpg") no-repeat center;
+  background: linear-gradient(to top, white 5%, rgba(133, 247, 255, 0.3)), url("../images/e-shop/back3.jpg") no-repeat center;
   background-size: cover;
+  min-height: 100vh;
 }
 
 header {
   background-color: #1B3F48;
-  /* position: fixed;
-    left: calc(50% - 1200px / 2);
-    top: 0; */
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
@@ -44,13 +42,14 @@ button, button:focus, button:hover, .buy-btn, .buy-btn:hover, .buy-btn:focus {
       -ms-flex-pack: justify;
           justify-content: space-between;
   color: #a9c2c9;
-  padding: 15px 40px;
+  padding: 7px 40px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
 .logo {
-  font-weight: bold;
+  height: 70px;
+  background: url(../images/e-shop/logo2.png) no-repeat;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -112,12 +111,6 @@ button, button:focus, button:hover, .buy-btn, .buy-btn:hover, .buy-btn:focus {
   background-color: #eee;
 }
 
-/*.products {*/
-/*display: flex;*/
-/*justify-content: space-between;*/
-/*flex-wrap: wrap;*/
-/*padding: 40px 80px;*/
-/*}*/
 .products {
   -webkit-column-gap: 40px;
           column-gap: 40px;
@@ -177,10 +170,6 @@ p {
   border: none;
 }
 
-/* img {
-    max-width: 100%;
-    height: auto
-} */
 .product-item img {
   display: block;
   height: 200px;
@@ -200,7 +189,6 @@ p {
 }
 
 .desc {
-  /* border: 1px solid #c0c0c040; */
   padding: 15px;
   background-color: #58787F;
 }
@@ -240,8 +228,6 @@ p {
 }
 
 .header-right {
-  /* position: static; */
-  /* width: 50%; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,17 +242,13 @@ p {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   right: 15%;
-  /* left: calc(50% - 1200px / 2); */
   top: 100px;
   position: absolute;
   background-color: white;
   padding: 20px;
   color: black;
-  /* min-width: 400px;
-    max-width: 100%; */
   width: 70%;
   z-index: 110;
-  margin: 0 auto;
 }
 
 .cart-block h2 {
@@ -298,19 +280,7 @@ p {
   display: none;
 }
 
-/* .cart-block:before{
-    content: '';
-    width: 0;
-    height: 0;
-    position: absolute;
-    top: -10px;
-    right: 35px;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid white;
-} */
 .buy-btn, .minus-btn, .plus-btn {
-  /* margin-top: 5px; */
   background-color: #1B3F48;
   padding: 5px 15px;
   color: #a9c2c9;
@@ -343,12 +313,6 @@ p {
 }
 
 .del-btn {
-  /* width: 24px;
-    height: 24px;
-    background-color: orangered; */
-  /* padding: 5px 15px; */
-  /* text-align: center; */
-  /* border: 1px solid transparent; */
   border: none;
   padding: 0;
   margin: 0;
@@ -359,7 +323,6 @@ p {
   border-radius: 50%;
   font-size: 22px;
   cursor: pointer;
-  /* border-radius: 50%; */
   -webkit-transition: all ease-in-out .4s;
   transition: all ease-in-out .4s;
 }
@@ -386,9 +349,6 @@ p {
   margin-bottom: 20px;
 }
 
-/* .cart-item:not(:last-child){
-    margin-bottom: 20px;
-} */
 .cart-item:last-child {
   margin-bottom: 40px;
 }
@@ -401,7 +361,6 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* flex-grow: 3; */
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -410,7 +369,6 @@ p {
 
 .cart-item-img {
   width: 60px;
-  /* margin-right: 15px; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -439,7 +397,6 @@ p {
 .product-price > span {
   font-size: 1.2em;
   font-weight: 700;
-  /* line-height: 1.2em; */
 }
 
 .product-desc {
@@ -447,7 +404,6 @@ p {
 }
 
 .product-quantity {
-  /* margin-top: 15px; */
   font-size: 1.2em;
   margin: 0 10px;
 }
@@ -475,6 +431,9 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .search-field:focus {
@@ -555,6 +514,25 @@ p {
   font-size: 20px;
 }
 
+.message {
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  top: 100px;
+  min-height: 150px;
+  padding: 40px 20px 10px;
+  text-align: center;
+  font-size: 1.3em;
+  -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: white;
+  color: black;
+  z-index: 110;
+}
+
 @media screen and (max-width: 667px) {
   .products {
     -webkit-column-gap: 20px;
@@ -579,6 +557,9 @@ p {
   }
   .product-price {
     width: 20%;
+  }
+  .btn-cart {
+    padding: 5px 10px;
   }
   .header-content {
     padding: 15px 15px;
