--- a/styles/e-shop.css
+++ b/styles/e-shop.css
@@ -48,6 +48,7 @@ button, button:focus, button:hover, .buy-btn, .buy-btn:hover, .buy-btn:focus {
 }
 
 .logo {
+  cursor: pointer;
   height: 70px;
   background: url(../images/e-shop/logo2.png) no-repeat;
   -webkit-box-flex: 1;
